fix: fix incorrect truncate strings with popover

--- a/src/components/NodeHostWrapper/NodeHostWrapper.scss
+++ b/src/components/NodeHostWrapper/NodeHostWrapper.scss
@@ -1,6 +1,4 @@
 .ydb-node-host-wrapper {
-    display: flex;
-
     &__host-wrapper {
         display: flex;
 
